--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@ktsstudio/mediaproject-vk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "KTS Studio",
   "license": "MIT",
   "description": "Package with utils for vk mini apps",
+  "keywords": [
+    "vk",
+    "vkontakte",
+    "vk-mini-app",
+    "vk-bridge"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
