--- a/package.json
+++ b/package.json
@@ -48,10 +48,14 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
+    "react": "^17.0.2",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "@ktsstudio/mediaproject-utils": "^2.1.0",
     "@vkontakte/vk-bridge": "^2.4.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   }
 }
