--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tsc-check": "tsc --skipLibCheck --noEmit --project tsconfig.json",
     "build": "yarn run rm-build; tsc --module es6 --target es6 --outDir dist --declarationDir dist/types",
     "build:cjs": "yarn run rm-build; tsc --module commonjs --target es5 --outDir dist --declarationDir dist/types",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "docs": "rm -rf doc && typedoc ./src/index.ts"
   },
   "lint-staged": {
     "*.{ts,js}?(x)": [
@@ -49,6 +50,9 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "typedoc": "^0.22.11",
+    "typedoc-github-wiki-theme": "^1.0.0",
+    "typedoc-plugin-markdown": "^3.11.12",
     "typescript": "^4.1.3"
   },
   "dependencies": {
