--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vkontakte/vk-bridge": "^2.7.2",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -51,11 +52,10 @@
     "react": "^17.0.2",
     "typescript": "^4.1.3"
   },
-  "dependencies": {
-    "@ktsstudio/mediaproject-utils": "^4.0.0",
-    "@vkontakte/vk-bridge": "^2.7.2"
-  },
+  "dependencies": {},
   "peerDependencies": {
+    "@ktsstudio/mediaproject-utils": "^4.0.0",
+    "@vkontakte/vk-bridge": "^2.7.2",
     "react": "^17.0.2"
   }
 }
