--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ktsstudio/mediaproject-vk",
   "version": "2.0.0",
   "description": "Package with utils for VK Mini Apps",
-  "author": "KTS Studio <hello@ktsstudio.ru> (https://kts.studio/)",
+  "author": "KTS Studio <hello@ktsstudio.ru> (https://kts.studio)",
   "keywords": [
     "vk",
     "vkontakte",
@@ -20,8 +20,8 @@
   "license": "MIT",
   "main": "./dist/cjs/index.js",
   "browser": "./dist/es/index.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/cjs/types/index.d.ts",
+  "module": "./dist/es/index.js",
+  "types": "./dist/es/index.d.ts",
   "files": [
     "dist/",
     "package.json",
