[+] сборка на rollup и документация

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,13 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "declaration": true,
-    "allowJs": true,
-    "noEmit": false,
-    "strict": true,
-    "module": "es6",
     "target": "es6",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "emitDeclarationOnly": true,
+    "strict": true,
+    "esModuleInterop": true,
     "jsx": "react",
-    "moduleResolution": "node"
+    "strictNullChecks": true,
   },
-  "main": "./src/index.ts",
-  "types": "./types/typings.d.ts",
-  "include": ["src", "types"],
-  "exclude": ["node_modules", "packages/*/node_modules"]
+  "include": ["src"]
 }
