--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^16.4.0",
-    "@types/react": "^17.0.2",
+    "@types/react": ">=17",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.14.1",
     "@vkontakte/vk-bridge": "^2.7.2",
@@ -66,15 +66,15 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
+    "react": ">=17",
     "rollup": "^3.10.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "@ktsstudio/mediaproject-utils": "^4.0.0",
-    "@types/react": "^17.0.2",
+    "@types/react": ">=17",
     "@vkontakte/vk-bridge": "^2.7.2",
-    "react": "^17.0.2"
+    "react": ">=17"
   }
 }
