--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ktsstudio/mediaproject-vk",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Package with utils for VK Mini Apps",
   "author": "KTS Studio <hello@ktsstudio.ru> (https://kts.studio)",
   "keywords": [
@@ -46,14 +46,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "@ktsstudio/mediaproject-utils": "^4.0.0",
+    "@ktsstudio/mediaproject-utils": "^4.1.1",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^16.4.0",
-    "@types/react": "^17.0.2",
+    "@types/react": ">=17",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.14.1",
     "@vkontakte/vk-bridge": "^2.7.2",
@@ -66,15 +66,15 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
+    "react": ">=17",
     "rollup": "^3.10.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "@ktsstudio/mediaproject-utils": "^4.0.0",
-    "@types/react": "^17.0.2",
+    "@ktsstudio/mediaproject-utils": "^4.1.1",
+    "@types/react": ">=17",
     "@vkontakte/vk-bridge": "^2.7.2",
-    "react": "^17.0.2"
+    "react": ">=17"
   }
 }
