--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "jsx": "react",
     "strictNullChecks": true,
+    "resolveJsonModule": true,
   },
-  "include": ["src"]
+  "include": ["src", "jest.config.ts"]
 }
