--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.102",
     "@swc/jest": "^0.2.29",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^16.4.0",
     "@types/react": ">=17",
@@ -74,6 +76,7 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
     "react": ">=17",
+    "react-dom": ">=17",
     "rollup": "^3.10.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-node": "^10.9.2",
