[+] Автотесты для shareVkPost

--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
+    "@types/jest-when": "^3.5.5",
     "@types/node": "^16.4.0",
     "@types/react": ">=17",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.14.1",
     "@vkontakte/vk-bridge": "^2.7.2",
+    "axios": "^1.6.7",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -74,6 +76,7 @@
     "husky": "^7.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-when": "^3.6.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
     "react": ">=17",
